--- a/styles/cart.css
+++ b/styles/cart.css
@@ -666,6 +666,7 @@ body{
 }
 #save-item-later{
     width: 100%;
+
     background-color: var(--bg-color);
     display: grid;
     grid-template-columns: repeat(4,1fr);
@@ -678,13 +679,26 @@ body{
 }
 #outer>div{
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 10px;
+}
+#outer{
+    /* border: 1px solid red; */
+    margin-left: 50px;
+    /* height: 400px;
+    
+    overflow: hidden; */
+    border-radius: 20px;
+    
 }
 #outer>div>.img{
     width: 100%;
+    height: 220px;
     display: block;
     margin: auto;
     padding-top: 15px;
     padding-left: 0%;
+    padding: 15px;
+    border-radius: 10px;    
 }
 #outer>div>h3{
     font-weight: 100;
